# RealTimeProject

./: .gitignore  CMakeLists.txt  Makefile  background.xcf
bkp/: graphics.c  graphics.h  ptask.h
include/: consts.h  graphics.h  ptask.h  structs.h  utils.h
prototypes/: airplane_task.c  airplane_task_wayp.c  graphic_task.c  input_task.c  waypoints.c
src/: graphics.c  main.c  ptask.c  structs.c
